--- a/car.css
+++ b/car.css
@@ -101,7 +101,7 @@ span{
     }
 }
 .city{
-    height: 300px;
+    height:250px;
     width: 500%;
     background-image: fixed;
     background-image: url(city.png);
@@ -122,13 +122,14 @@ span{
 .car{
     width: 15px;  
     left: 35%;
-    bottom: -30px;
+    bottom: -20px;
     position: absolute;
     z-index: 2;
 }
 .car img{
+    height: 350px;
 
-    animation: car 6s ease-in-out;
+    animation: car 4s ease-in-out;
     animation-iteration-count: infinite;
 }
 
@@ -150,8 +151,9 @@ span{
     z-index: 2;
 }
 .wheeler img{
+    height: 330px;
 
-    animation: wheeler 10s ease-in-out;
+    animation: wheeler 7s ease-in-out;
     animation-iteration-count: infinite;
 }
 
@@ -232,27 +234,45 @@ span{
 
     }
 }
-@media (min-device-width:600px) {
-    img[data-src-600px] {
-        content: attr(data-src-600px, url);
+@media (max-device-width:1500px) {
+    .container{
+        height: 100vh;
+        width: 100%;
+    }
+    
+    img[data-src-760px] {
+        height: 200vh;
+        content: attr(data-src-500px, url);
     }
 }
+@media screen and (max-width: 992px) {
+    .container{
+        height: 200vh;
+      width: 50%;
+    
+    }
+  }
+  
 
-@media (min-device-width:800px) {
-    img[data-src-800px] {
-        content: attr(data-src-800px, url);
-    }
-}
+
+
 @media only screen and (max-width:1000px){
     span
     {
         display: block;
     }
+    ul li a{
+        display: block;
+        padding: 1px;
+        background-attachment: fixed;
+    }
     ul li{
         display: block;
+        padding: 1px;
     
     }
     ul{
         display: none;
+        padding: 1px;
     }
 }
